// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NameFilterEditor NewNameFilterEditor rendering renders expected elements 1`] = `
<FilterEditor
  aria-labelledby="random-id-list-label"
  chipId="button"
  id="random-id"
  onSave={[Function]}
>
  <ListInput
    column={true}
    error={null}
    getHighlightKey={[Function]}
    getItemKey={[Function]}
    getItemName={[Function]}
    getSuggestionValue={[Function]}
    getSuggestions={[Function]}
    id="random-id-list"
    label="label"
    list={
      [
        "a",
      ]
    }
    onErrorChange={[MockFunction]}
    onListChange={[MockFunction]}
    onTextChange={[MockFunction]}
    placeholder="placeholder"
    renderItem={[Function]}
    renderSuggestion={[MockFunction]}
    value=""
  />
</FilterEditor>
`;

exports[`NameFilterEditor NewNameFilterEditor rendering renders expected elements when list is not set 1`] = `
<FilterEditor
  aria-labelledby="random-id-list-label"
  chipId="button"
  id="random-id"
  onSave={[Function]}
>
  <ListInput
    column={true}
    error={null}
    getHighlightKey={[Function]}
    getItemKey={[Function]}
    getItemName={[Function]}
    getSuggestionValue={[Function]}
    getSuggestions={[Function]}
    id="random-id-list"
    label="label"
    list={[]}
    onErrorChange={[MockFunction]}
    onListChange={[MockFunction]}
    onTextChange={[MockFunction]}
    placeholder="placeholder"
    renderItem={[Function]}
    renderSuggestion={[MockFunction]}
    value=""
  />
</FilterEditor>
`;

exports[`NameFilterEditor OldNameFilterEditor rendering renders expected elements 1`] = `
<ListInput
  column={true}
  error={null}
  getHighlightKey={[Function]}
  getItemKey={[Function]}
  getItemName={[Function]}
  getSuggestionText={[Function]}
  getSuggestions={[Function]}
  id="nameFilterEditorInput"
  label="label"
  list={
    [
      {
        "name": "Alpha",
      },
    ]
  }
  onErrorChange={[MockFunction]}
  onListChange={[Function]}
  onTextChange={[MockFunction]}
  placeholder="placeholder"
  renderItem={[MockFunction]}
  renderSuggestion={[MockFunction]}
  value=""
/>
`;

exports[`NameFilterEditor OldNameFilterEditor rendering renders expected elements when list input requests suggestion highlight key 1`] = `
<ListInput
  column={true}
  error={null}
  getHighlightKey={[Function]}
  getItemKey={[Function]}
  getItemName={[Function]}
  getSuggestionText={[Function]}
  getSuggestions={[Function]}
  id="nameFilterEditorInput"
  label="label"
  list={
    [
      {
        "name": "Alpha",
      },
    ]
  }
  onErrorChange={[MockFunction]}
  onListChange={[Function]}
  onTextChange={[MockFunction]}
  placeholder="placeholder"
  renderItem={[MockFunction]}
  renderSuggestion={[MockFunction]}
  value=""
/>
`;

exports[`NameFilterEditor OldNameFilterEditor rendering renders expected elements when list input requests suggestions text 1`] = `
<ListInput
  column={true}
  error={null}
  getHighlightKey={[Function]}
  getItemKey={[Function]}
  getItemName={[Function]}
  getSuggestionText={[Function]}
  getSuggestions={[Function]}
  id="nameFilterEditorInput"
  label="label"
  list={
    [
      {
        "name": "Alpha",
      },
    ]
  }
  onErrorChange={[MockFunction]}
  onListChange={[Function]}
  onTextChange={[MockFunction]}
  placeholder="placeholder"
  renderItem={[MockFunction]}
  renderSuggestion={[MockFunction]}
  value=""
/>
`;

exports[`NameFilterEditor OldNameFilterEditor rendering renders expected elements when list is null 1`] = `
<ListInput
  column={true}
  error={null}
  getHighlightKey={[Function]}
  getItemKey={[Function]}
  getItemName={[Function]}
  getSuggestionText={[Function]}
  getSuggestions={[Function]}
  id="nameFilterEditorInput"
  label="label"
  list={[]}
  onErrorChange={[MockFunction]}
  onListChange={[Function]}
  onTextChange={[MockFunction]}
  placeholder="placeholder"
  renderItem={[MockFunction]}
  renderSuggestion={[MockFunction]}
  value=""
/>
`;

exports[`NameFilterEditor OldNameFilterEditor rendering renders expected elements when sourceById does not have list id 1`] = `
<ListInput
  column={true}
  error={null}
  getHighlightKey={[Function]}
  getItemKey={[Function]}
  getItemName={[Function]}
  getSuggestionText={[Function]}
  getSuggestions={[Function]}
  id="nameFilterEditorInput"
  label="label"
  list={
    [
      {
        "id": "a",
      },
    ]
  }
  onErrorChange={[MockFunction]}
  onListChange={[Function]}
  onTextChange={[MockFunction]}
  placeholder="placeholder"
  renderItem={[MockFunction]}
  renderSuggestion={[MockFunction]}
  value=""
/>
`;

exports[`NameFilterEditor rendering renders expected elements when forArea is not set 1`] = `
<OldNameFilterEditor
  label="label"
/>
`;

exports[`NameFilterEditor rendering renders expected elements when forArea is set 1`] = `
<NewNameFilterEditor
  label="label"
/>
`;
